hack: new tipc tool, draft, will be force removed
Just a first draft to test and make some syntax decisions. This will
be patched up and submitted elsewhere later. I.e. it will be force
removed later.

--- a/configure.ac
+++ b/configure.ac
@@ -36,6 +36,7 @@ AC_CONFIG_FILES([
 	tipc-config/Makefile
 	tipc-pipe/Makefile
 	tipc/Makefile
+	tipc2/Makefile
 	ptts/Makefile
 	demos/Makefile
 	demos/benchmark/Makefile
