--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
 SUBDIRS=tipc-pipe ptts demos man scripts
 if TIPC_NEW_NL_API
 SUBDIRS+=tipc
+SUBDIRS+=tipc2
 endif
 if TIPC_LINK_STATE_SUBSCRITION
 SUBDIRS+=tipclog
